# EnergyAnomalyDetector

./: INSTALL.txt  RUN_ME.txt  __init__.py  app.py  app_flask.py  backup_data.py  energy_anomaly_detection.db  init_database.py  pyproject.toml  run.py  run_app.bat  run_app.sh  run_flask.py  update_copyright.sh
.streamlit/: config.toml  style.css
app/: __init__.py  models.py
assets/: sample_data.csv
attached_assets/: Pasted-Build-a-professional-Anomaly-detection-in-energy-efficiency-Anomaly-using-Machine-Learning-The-pr-1745750809801.txt  Pasted-FO-database-connection-Using-local-SQLite-database-for-offline-mode-INFO-database-connection-Databa-1745765140733.txt  Pasted-I-would-like-you-to-Build-a-professional-Anomaly-detection-in-energy-efficiency-Anomaly-using-Mach-1745785752631.txt  Pasted-Implementation-Timeline-TypeError-Object-of-type-timedelta-is-not-JSON-serializable-Traceback-F-1745770404444.txt  Pasted-Notification-Settings-Settings-saved-successfully-streamlit-errors-StreamlitDuplicateElemen-1745771887778.txt  Pasted-TypeError-Unable-to-convert-function-return-value-to-a-Python-type-The-signature-was-handle--1745752439885.txt
database/: __init__.py  connection.py  crud.py  db_utils.py  init_db.py  models.py
models/: __init__.py  autoencoder.py  isolation_forest.py  kmeans.py
pages/: 00_💼_StartPage.py  01_Home.py  02_Dashboard.py  03_Upload_Data.py  04_Run_Detection.py  05_Results.py  06_Model_Insights.py  07_Recommendations.py  08_Code_Snippets.py  08_Settings.py  __init__.py
styles/: __init__.py  code_snippets.css  custom.py
templates/: base.html  (+1 more)
(+56 files in other folders)
